default user profile image changed - new view delete acc message created - remove acc controllers and routes added

--- a/estructura de archivos/public/css/log-reg-profile.css
+++ b/estructura de archivos/public/css/log-reg-profile.css
@@ -55,7 +55,6 @@ input:-webkit-autofill:active {
 /** BODY | BOX */
 
 .body__form--box {
-    width: 75vw;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -88,7 +87,6 @@ input:-webkit-autofill:active {
     left: 0;
     overflow: hidden;
     border-radius: 50%;
-    border: 2px solid var(--C_Ice-Cream);
 }
 
 #avatar {
@@ -292,22 +290,88 @@ input:-webkit-autofill:active {
 
 .body__form__redirect {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    align-items: center ;
-    gap: 10px;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    gap: 25px;
 }
 
 .body__form__redirect a {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     color: var(--C_Soft_Gray);
     font-weight: bold;
     transition: 0.75s;
 }
-
 .body__form__redirect a:hover {
     color: var(--C_Lightblue_Logo);
-    font-size: 0.82rem;
+    font-size: 0.80rem;
+}
+
+/** BODY | FORMS | DELETE ACC */
+
+.body__form__redirect--deleteAcc {
+    background-color: rgba(12, 12, 12, 0.25)
+}
+
+.body__form__redirect--deleteAcc a {
+    color: var(--C_Light_Grey);
+}
+
+/** BODY | FORMS | WARNING TEXT  */
+
+.body__form--warningBox {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(12, 12, 12, 0.25);
+    padding: 20px;
+    width: 350px
+}
+
+.body__form--warningText {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
+.body__form--negative {
+    text-align: center;
+    margin: 25px 0;
+}
+
+.body__form--negative a {
+    font-size: 0.95rem;
+    color: var(--C_Lightblue_Logo);
+    font-weight: normal;
+    transition: 0.75s;
+}
+
+.body__form--negative a:hover {
+    color: var(--C_Pink_Logo);
+    font-size: 0.80rem;
+}
+
+.body__form--affirmative {
+    text-align: center;
+}
+
+.body__form--affirmative button {
+    border: none;
+    background: none;
+    outline: none;
+    font-size: 0.95rem;
+    color: var(--C_Pink_Logo);
+    font-weight: normal;
+    transition: 0.75s;
+}
+
+.body__form--affirmative button:hover {
+    color: var(--C_Lightblue_Logo);
+    font-size: 0.80rem;
 }
 
 /** BODY | FORM | PASSWORD TOGGLER */
