--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -48,5 +48,5 @@
 
 </html>
 
-<!-- scripts user profile image -->
+<!-- script password toggler -->
 <script src="/javascripts/togglePass.js"></script>
