--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -4,7 +4,7 @@
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span></button>
-                <a class="header--figure-logo" href="/"><img src="/images/logo2.png" alt=""></a>
+                <a class="header--figure-logo" href="/"><img src="/images/DALF-LOGO.png" alt=""></a>
                 <div class="header__top--general-navigation_button">
                     <form action="/search" class="header__top--search">
                         <input type="text" name="keywords" placeholder="Buscar" required>
