Footer logo update! :D

--- a/estructura de archivos/src/views/partials/footer.ejs
+++ b/estructura de archivos/src/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer__content">
   <section class="footer--logo">
-    <a href="/index"><img src="/images/logo2.png" alt="Logo" /></a>
+    <a href="/index"><img src="/images/DALF-LOGO.png" alt="Logo" /></a>
   </section>
   <section class="footer_nav">
     <nav class="footer_nav-home">
