password's and birthday's fields fixed up to match with models

--- a/estructura de archivos/src/views/users/login.ejs
+++ b/estructura de archivos/src/views/users/login.ejs
@@ -19,10 +19,10 @@
                                 <p class="inputs__text__warnings"><%= locals.errors && errors.email ? errors.email.msg : null %></p>
                             </div>
                             <div class="body__form__inputs__userData--input">
-                                <label for="pass">Contraseña:</label>
-                                <input type="password" placeholder="Contraseña" id="pass" name="pass">
+                                <label for="password">Contraseña:</label>
+                                <input type="password" placeholder="Contraseña" id="password" name="password">
                                 <i class="fa-regular fa-eye-slash" id="togglePass"></i>
-                                <p class="inputs__text__warnings"><%= locals.errors && errors.pass ? errors.pass.msg : null %></p>
+                                <p class="inputs__text__warnings"><%= locals.errors && errors.password ? errors.password.msg : null %></p>
                             </div>
                         </div>
                         <div class="body__form__inputs--chckbx">
