--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -37,8 +37,8 @@
                             </div>
 
                             <div class="body__form__inputs__userData--input">
-                                <label for="bday">Cumpleaños:</label>
-                                <input type="date" id="bday" name="bday" value="<%= user.bday %>">
+                                <label for="birthday">Cumpleaños:</label>
+                                <input type="date" id="birthday" name="birthday" value="<%= user.birthday %>">
                             </div>
 
                             <div class="body__form__inputs__userData__input--select">
