--- a/estructura de archivos/src/views/users/register.ejs
+++ b/estructura de archivos/src/views/users/register.ejs
@@ -24,9 +24,9 @@
                                 <p class="inputs__text__warnings"><%= locals.errors && errors.email ? errors.email.msg : null %></p>
                             </div>
                             <div class="body__form__inputs__userData--input">
-                                <label for="pass">Contraseña:</label>
-                                <input type="password" placeholder="Contraseña" id="pass" name="pass">
-                                <p class="inputs__text__warnings"><%= locals.errors && errors.pass ? errors.pass.msg : null %></p>
+                                <label for="password">Contraseña:</label>
+                                <input type="password" placeholder="Contraseña" id="password" name="password">
+                                <p class="inputs__text__warnings"><%= locals.errors && errors.password ? errors.password.msg : null %></p>
                             </div>
                             <div class="body__form__inputs__userData--input">
                                 <label for="repass">Confirmar contraseña:</label>
