--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -41,7 +41,7 @@
                 <%- include("./partials/product",{id, name, price, image, discount, toThousand }) %>
                 <% }) %>
         </section>
-        <div class="main-content-buttom"><button class="main-display-button">Ver más</button></div>
+        <div class="main-content-buttom"><a href="./products/productsRecommended.ejs"><button class="main-display-button">Ver más</button></a></div>
         <div id="carouselExampleCaptions" style="margin-bottom: 0px;" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
