--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
                 <span class="navbar-toggler-icon"></span></button>
                 <a class="header--figure-logo" href="/"><img src="/images/DALF-LOGO.png" alt=""></a>
                 <div class="header__top--general-navigation_button">
-                    <form action="/search" class="header__top--search">
+                    <form action="/search" method="GET" class="header__top--search">
                         <input type="text" name="keywords" placeholder="Buscar" required>
                         <div class="header__top--search-button"><i class="fa-solid fa-magnifying-glass icon"></i></div>
                     </form>
@@ -78,7 +78,7 @@
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Juegos</a>
                         <ul class="dropdown-menu menu_dropdown">
                             <li>
-                            <small class="title__nav_item" style="margin-left: 2.5rem;">Plataformas</small>
+                            <small class="title__nav_item" style="margin-left: 1px;">Plataformas</small>
                             <ul class="cointeiner__links_nav_item" style="list-style: none;">
                                 <li><a class="dropdown-item" href="#">Steam Juegos</a></li>
                                 <li><a class="dropdown-item" href="#">Xbox Juegos</a></li>
@@ -91,16 +91,16 @@
                             </ul>
                             </li>
                             <li>
-                                <small class="title__nav_item" style="margin-left: 0.39rem;">Descubrir por generos</small>
+                                <small class="title__nav_item" style="margin-left: -20px;">Descubrir por generos</small>
                                 <ul class="cointeiner__links_nav_item" style="list-style: none;">
                                     <li><a class="dropdown-item" href="#">Acción</a></li>
                                     <li><a class="dropdown-item" href="#">Aventura</a></li>
                                     <li><a class="dropdown-item" href="#">Lucha</a></li>
                                     <li><a class="dropdown-item" href="#">FPS / TPS</a></li>
                                     <li><a class="dropdown-item" href="#">Indie</a></li>
-                                    <li><a class="dropdown-item" href="#">Epic Games Juegos</a></li>
-                                    <li><a class="dropdown-item" href="#">GOG Juegos</a></li>
-                                    <li><a class="dropdown-item" href="#">Battle.net Juegos</a></li>
+                                    <li><a class="dropdown-item" href="#">MMO</a></li>
+                                    <li><a class="dropdown-item" href="#">RPG</a></li>
+                                    <li><a class="dropdown-item" href="#">Simulación</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -109,7 +109,7 @@
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Tarjeta de regalo</a>
                         <ul class="dropdown-menu tarjetaDeRegalo__move">
                             <li>
-                                <small class="title__nav_item" style="margin-left: 2.5rem;">Lista de tarjetas de regalo</small>
+                                <small class="title__nav_item" style="margin-left: 1px;">Lista de tarjetas de regalo</small>
                                 <ul class="cointeiner__links_nav_item" style="list-style: none;">
                                     <li><a class="dropdown-item" href="#">Steam Tarjetas</a></li>
                                     <li><a class="dropdown-item" href="#">Xbox Live Tarjetas</a></li>
