--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -22,18 +22,12 @@
 
                             <div class="form-box">
                                 <label class="form__label">Categorías:</label>
-                                <select name="category" id="category">
-                                    <option  value="accion"<%= productToEdit.category === 'accion' && 'selected' %>>Acción</option>
-                                    <option  value="aventura"<%= productToEdit.category === 'aventura' && 'selected' %>>Aventura</option>
-                                    <option  value="fps/tps"<%= productToEdit.category === 'fps/tps' && 'selected' %>>FTP/TPS</option>
-                                    <option  value="rpg"<%= productToEdit.category === 'rpg' && 'selected' %>>RPG</option>
-                                    <option  value="simulacion"<%= productToEdit.category === 'simulacion' && 'selected' %>>Simulación</option>
-                                    <option  value="carreras"<%= productToEdit.category === 'carreras' && 'selected' %>>Carreras</option>
-                                    <option  value="lucha"<%= productToEdit.category === 'lucha' && 'selected' %>>Lucha</option>
-                                    <option  value="mmo"<%= productToEdit.category === 'mmo' && 'selected' %>>MMO</option>
-                                    <option  value="arcade"<%= productToEdit.category === 'arcade' && 'selected' %>>Arcade</option>
-                                    <option  value="otro"<%= productToEdit.category === 'otro' && 'selected' %>>Otro</option>
+                                <select name="category" id="" >
+                                    <% categories.forEach(category => { %>
+                                    <option <%= productToEdit.categoryId == category.id ? "selected" : "" %> value="<%= category.id %>"><%= category.name %></option>
+                                    <% }); %>
                                 </select>
+                                
                                 <small class="form-error"><%= locals.errors && errors.category ? errors.category.msg : null %></small>
                             </div>
 
