--- a/estructura de archivos/src/views/products/productsLoad.ejs
+++ b/estructura de archivos/src/views/products/productsLoad.ejs
@@ -26,6 +26,7 @@
                         <div class="form-box">
                             <label class="form__label">Categorías:</label>
                             <select name="category" id="" >
+                                <option value="" hidden selected>Seleccionar categoría...</option>
                                 <% categories.forEach(category => { %>
                                 <option <%= locals.old && old.category && old.category == category.id ? "selected" : "" %> value="<%= category.id %>"><%= category.name %></option>
                                 <% }); %>
@@ -55,6 +56,7 @@
                         <div class="form-box">
                             <label class="form-label">Sección:</label>
                             <select name="section" id="section" >
+                                <option value="" hidden selected>Seleccionar una seccion...</option>
                                 <% sections.forEach(section => { %>
                                 <option <%= locals.old && old.section && old.section == section.id ? "selected" : "" %> value="<%= section.id %>"><%= section.name %></option>
                                 <% }); %>
@@ -65,6 +67,7 @@
                         <div class="form-box">
                             <label class="form-label">Companía:</label>
                             <select name="company" id="" required>
+                                <option value="" hidden selected>Seleccionar una compania...</option>
                                 <% brands.forEach(company => { %>
                                     <option <%= locals.old && old.company && old.company == company.id ? "selected" : "" %> value="<%= company.id %>"><%= company.name %></option>
                                 <% }); %>
