--- a/estructura de archivos/src/views/partials/header.ejs
+++ b/estructura de archivos/src/views/partials/header.ejs
@@ -127,9 +127,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Xbox</a>
                         <ul class="dropdown-menu cointeiner__links_nav_item">
-                            <% categories.forEach(category => { %>
-                                <li class="mx-3 h2"><a href="/products/category/<%= category.id %>"><%= category.name %></a></li>
-                            <% }) %>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
