--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -14,7 +14,7 @@
             <main class="productdetail__main">
                 <div class="content_detail_product_images">
                     <section class="detail__product__images">
-                        <img class="product-img" src="/images/products/<%= product.image[0].file %>" alt="product">
+                        <img class="product-img" src="/images/products/<%= product.image? product.image[0].file : "default-product-image.jpg" %>" alt="product">
                         <section class="detail__purchase">
                             <article class="detail__purchase__product">
                                 <h1 class="detail__purchase__product--title"> <%= product.name %> </h1>
@@ -41,7 +41,7 @@
                                 <div class="detail__purchase__buttons--fav">
                                     <button type="submit" name="favorites"><i class="fa-solid fa-heart"></i> Agregar a favoritos</button>
                                 </div>
-                                <% if (locals.userLogin && userLogin.rol === "admin") { %>
+                                <% if (locals.userLogin && userLogin.rol === 1) { %>
                                     <div class="edit__product">
                                         <a href="/products/productEdit/<%= product.id %>"><button type="submit"><i class="fa-solid fa-pen-to-square"></i> Editar producto</button></a>
                                     </div>
