--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -14,7 +14,7 @@
             <main class="productdetail__main">
                 <div class="content_detail_product_images">
                     <section class="detail__product__images">
-                        <img class="product-img" src="/images/products/<%= product.image? product.image[0].file : "default-product-image.jpg" %>" alt="product">
+                        <img class="product-img" src="/images/products/<%= product.image.length > 0 ? product.image[0].file : "default-product-image.jpg" %>" alt="product">
                         <section class="detail__purchase">
                             <article class="detail__purchase__product">
                                 <h1 class="detail__purchase__product--title"> <%= product.name %> </h1>
