working on user profile - html&css

--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -51,7 +51,7 @@
 
                     <div class="body__profile--products">
                         <div class="body__profile__product--productsForSale">
-                            <h4>Mis productos a la venta</h4>
+                            <h4>Mis productos en venta</h4>
                             <p>acá irán los productos a la venta</p> <!-- acá irán los productos a la venta -->
                         </div>
                         <div class="body__profile__product--soldProducts">
@@ -67,7 +67,7 @@
                 </div>
 
                 <div class="body__profile--edit">
-
+                    <a href="/users/profileUpdate">Editar Perfil</a>
                 </div>
 
             </div>
@@ -75,6 +75,3 @@
     </body>
 
 </html>
-
-<!-- script user profile image -->
-<script src="/javascripts/profileImage.js"></script>
