--- a/estructura de archivos/src/views/products/productDetail.ejs
+++ b/estructura de archivos/src/views/products/productDetail.ejs
@@ -9,7 +9,7 @@
             <!-- /Header -->
 
             <div class="">
-                <h3 class="products-titulo">Editar producto</h3>
+                <h3 class="title__h3">Editar producto</h3>
             </div>
             <main class="productdetail__main">
                 <div class="content_detail_product_images">
@@ -55,11 +55,11 @@
                 </div>
                 <div class="product_and_features">
                     <section class="detail__product__store">
-                        <h3>Descripción</h3>
+                        <h3 class="title__h3">Descripción</h3>
                         <p> <%= product.description %> </p>
                     </section>
                     <section class="detail__product__features">
-                        <h3>Caracteristicas</h3>
+                        <h3 class="title__h3">Caracteristicas</h3>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur quia!</li>
                             <li>Lorem ipsum dolor sit amet consectetur quia!</li>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="content_detail_product_rating">
                     <section class="detail__product__ratings">
-                        <h3>Calificaciones</h3>
+                        <h3 class="title__h3">Calificaciones</h3>
                         <article>
                             <div class="detail__product__ratings-buttons">
                                 <button><i class="fa-regular fa-thumbs-up"></i> Positivas</button>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="content_detail_product_questions">
                     <section class="detail__product__questions">
-                        <h3>Preguntas Frecuentes</h3>
+                        <h3 class="title__h3">Preguntas Frecuentes</h3>
                         <article>
                             <ul>
                                 <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, tempore.</li>
