--- a/estructura de archivos/public/css/profile.css
+++ b/estructura de archivos/public/css/profile.css
@@ -21,8 +21,8 @@
 }
 
 .body__profile--avatar {
-    height: 80px;
-    width: 80px;
+    height: 175px;
+    width: 175px;
     position: relative;
     top: 50%;
     left: 0;
@@ -30,13 +30,13 @@
     border-radius: 50%;
 }
 
-#avatar {
-    height: 80px;
-    width: 80px;
+.body__profile--avatar img {
+    height: 100%;
+    width: 100%;
     margin: 0;
 }
 
-.body__profile--avatar p {
+.body__profile--avatarAndLocation p {
 
 }
 
