--- a/estructura de archivos/public/css/styles.css
+++ b/estructura de archivos/public/css/styles.css
@@ -11,5 +11,5 @@
 @import'/css/shopping.css';
 @import'/css/productsLoad.css';
 @import'/css/results.css';
-@import'/css/log-reg-profile.css';
-@import'/css/profileUpdate.css';
+@import'/css/login-register-profileUpdate.css';
+@import'/css/profile.css';
