api users done - working on auth & remove -  seeders fixed

--- a/estructura de archivos/src/views/users/profile.ejs
+++ b/estructura de archivos/src/views/users/profile.ejs
@@ -28,7 +28,7 @@
                         </div>
                         
                         <div class="body__profile__userInfo--birthday">
-                            <p><%= moment(user.birthday).format('DD-MM-YYYY') %></p>
+                            <p><%= moment(user.birthday).format('YYYY-MM-DD') %></p>
                         </div>
                     </div>
 
